--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body{
     left: 0;
     right: 0;
     background: linear-gradient(to top, rgba(109,93,107,0.9), transparent);
-    padding: 40px 20px 80px;
+    padding: 40px 20px;
     z-index: 2;
     text-align: center;
 }
@@ -998,7 +998,7 @@ footer {
     background: linear-gradient(rgba(109,93,107,0.96), rgba(109,93,107,0.96)),
                 url('https://images.unsplash.com/photo-1552902865-b72c031ac5ea?auto=format&fit=crop&w=1600&q=80') center/cover;
     color: var(--white);
-    padding: 40px 20px 80px;
+    padding: 40px 20px;
     text-align: center;
     font-size: 13px;
 }
@@ -1231,22 +1231,13 @@ body.chinese-lang .map-overlay .chinese {
         margin-top: 0;
     }
     .carousel-overlay {
-        padding: 20px 15px 65px;
+        padding: 20px 15px;
     }
     .carousel-overlay h2 {
         font-size: 24px;
     }
     .carousel-overlay .subtitle {
         font-size: 16px;
-    }
-    /* Keep carousel dots from blocking text on small screens */
-    .carousel-dots {
-        bottom: calc(env(safe-area-inset-bottom) + 10px);
-        gap: 6px;
-    }
-    .carousel-dot {
-        width: 8px;
-        height: 8px;
     }
     .carousel-nav button {
         width: 40px;
@@ -1838,8 +1829,12 @@ p{margin:0 0 12px;}
 </section>
 <section class="hero">
 <div>
-<h2 class="english">Where quality, style, and trusted excellence come together seamlessly</h2>
-<h2 class="chinese">品质、风格和值得信赖的卓越品质完美融合</h2>
+<h2 class="english">Elegant Tailoring for Modern Women</h2>
+<h2 class="chinese">现代女性优雅定制</h2>
+<div class="subtitle english">Bespoke Fashion Crafted for You</div>
+<div class="subtitle chinese">为您量身定制的时尚</div>
+<p class="english">AnaCoo Tailor</p>
+<p class="chinese">AnaCoo Tailor</p>
 </div>
 </section>
 <section class="section services-section" id="services">
