--- a/index.html
+++ b/index.html
@@ -3614,6 +3614,7 @@ html, body{
 <span>
 <span class="english">R&amp;F Princess Cove (Johor Bahru)</span>
 <span class="chinese">富力公主湾（柔佛新山）</span>
+<span class="malay">R&amp;F Tanjung Puteri (Johor Bahru)</span>
 </span>
 </div>
 <div class="contact-item">
