--- a/index.html
+++ b/index.html
@@ -3290,7 +3290,7 @@ html, body{
 <div class="service-name">
 <span class="english">Tapering</span>
 <span class="chinese">逐渐变细</span>
-<span class="malay">Kecilkan Potongan</span>
+<span class="malay">Tirus</span>
 </div>
 <div class="service-price">RM10-15</div>
 </div>
@@ -3359,7 +3359,7 @@ html, body{
 <div class="service-name">
 <span class="english">Tapering</span>
 <span class="chinese">逐渐变细</span>
-<span class="malay">Kecilkan Potongan</span>
+<span class="malay">Tirus</span>
 </div>
 <div class="service-price">RM15-20</div>
 </div>
